# roxabi-idna

./: .env.example  .gitignore  .license-policy.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  idna-ops.md  idna_build_tree.py  idna_encode_all.py  idna_setup.py  pyproject.toml  release-please-config.json
.claude/: stack.yml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml
deploy/supervisor/conf.d/: idna.conf
docs/: contributing.md
docs/architecture/: index.md  patterns.md  ubiquitous-language.md
docs/guides/: deployment.md  troubleshooting.md
docs/processes/: dev-process.md  issue-management.md
docs/standards/: backend-patterns.md  code-review.md  configuration.md  frontend-patterns.md  testing.md
idna/: config.py  nodes.py  pbo.py  server.py  session.py
templates/: __init__.py  base.py  icon_set.py  motion_curve.py  voice.py
tests/: test_placeholder.py
